kubernetes/apps/observability/grafana/instance/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  annotations:
    external-dns.alpha.kubernetes.io/target: gateway.platform.example.com
spec:
  hostnames:
    - grafana.platform.example.com
  parentRefs:
    - name: public-gateway
      namespace: istio-system
      sectionName: https
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000
